#1 新增 顶栏高斯模糊效果 #2 新增 状态栏与小白条沉浸 #3 新增 滚动条 #4 优化 爬取逻辑

--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -5,7 +5,7 @@
     <string name="ok">わかった</string>
     <string name="cancel">キャンセル</string>
     <string name="edittext_hint_default">ここに内容を入力してください</string>
-    <string name="app_name">柚壇コミュニティ</string>
+    <string name="app_name">Uotan</string>
     <string name="next">次のステップ</string>
     <string name="home">家</string>
     <string name="me">私</string>
