我不知道，发烧中，瞎写的

--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -5,7 +5,7 @@
     <string name="ok">わかった</string>
     <string name="cancel">キャンセル</string>
     <string name="edittext_hint_default">ここに内容を入力してください</string>
-    <string name="app_name">Uotan</string>
+    <string name="app_name">UOTAN</string>
     <string name="next">次のステップ</string>
     <string name="home">家</string>
     <string name="me">私</string>
@@ -18,4 +18,33 @@
     <string name="message">メッセージ</string>
     <string name="latest">最新</string>
     <string name="recommend">推奨</string>
+    <string name="user_name">ユーザー名</string>
+    <string name="time">時間</string>
+    <string name="content">内容</string>
+    <string name="please_comment">コメントを投稿しよう</string>
+    <string name="share_count">共有数量</string>
+    <string name="favourite_count">「いいね」の数</string>
+    <string name="follow">に注目</string>
+    <string name="welcome">UOTAN コミュニティへようこそ</string>
+    <string name="welcome_describe">あなたのゲームリポジトリ</string>
+    <string name="no_login">しばらく見て、しばらくログインしません</string>
+    <string name="first_login">アカウントがあり、ログインします</string>
+    <string name="first_register">アカウントがないので、登録します</string>
+    <string name="allow_arguments">サービス契約、プライバシーポリシー、ユーザー条約、免責事項に同意する</string>
+    <string name="login">ログイン</string>
+    <string name="username_or_email">ユーザー名またはメールアドレス</string>
+    <string name="password">パスワード</string>
+    <string name="xiaomi">Xiaomi</string>
+    <string name="redmi">Redmi</string>
+    <string name="oneplus">Oneplus</string>
+    <string name="meizu">Meizu</string>
+    <string name="tablet_laptop">タブレット/ノートパソコン</string>
+    <string name="smart_life">インテリジェントライフ</string>
+    <string name="systems_software">システムソフトウェア</string>
+    <string name="forum_services">フォーラムサービス</string>
+    <string name="please_press_username_password">ユーザー名またはメールボックスとパスワードを入力してください</string>
+    <string name="please_press_username">ユーザー名またはメールボックスを入力してください</string>
+    <string name="please_press_password">パスワードを入力してください</string>
+    <string name="password_incorrect">不正なアカウントまたは未登録のアカウント</string>
+    <string name="my_follow">私の関心</string>
 </resources>
