--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -18,4 +18,33 @@
     <string name="message">消息</string>
     <string name="latest">最新</string>
     <string name="recommend">推荐</string>
+    <string name="user_name">用户名</string>
+    <string name="time">时间</string>
+    <string name="content">内容</string>
+    <string name="please_comment">发条评论吧</string>
+    <string name="share_count">分享数</string>
+    <string name="favourite_count">点赞数</string>
+    <string name="follow">关注</string>
+    <string name="welcome">欢迎来到柚坛社区</string>
+    <string name="welcome_describe">你的玩机资源库</string>
+    <string name="no_login">先看看，暂不登录</string>
+    <string name="first_login">已有帐号，去登录</string>
+    <string name="first_register">没有账号，去注册</string>
+    <string name="allow_arguments">同意服务协议、 隐私政策、用户公约、免责声明</string>
+    <string name="login">登录</string>
+    <string name="username_or_email">用户名或邮件地址</string>
+    <string name="password">密码</string>
+    <string name="xiaomi">小米手机</string>
+    <string name="redmi">红米手机</string>
+    <string name="oneplus">一加手机</string>
+    <string name="meizu">魅族手机</string>
+    <string name="tablet_laptop">平板/笔记本电脑</string>
+    <string name="smart_life">智能生活</string>
+    <string name="systems_software">系统软件</string>
+    <string name="forum_services">站务专区</string>
+    <string name="please_press_username_password">请输入用户名/邮箱和密码</string>
+    <string name="please_press_username">请输入用户名/邮箱</string>
+    <string name="please_press_password">请输入密码</string>
+    <string name="password_incorrect">您的账密不正确或未注册</string>
+    <string name="my_follow">我的关注</string>
 </resources>
