--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -93,4 +93,46 @@
     <string name="core_team">コアチームである私たちのチームは、中国各地から来ています。</string>
     <string name="special_thanks">特にありがとうございます。背後で技術サポートを提供してくれた開発者たちに感謝します。</string>
     <string name="open_source_address">オープンソースアドレス</string>
+    <string name="private_message">私信</string>
+    <string name="trends">動的</string>
+    <string name="categorize">分類</string>
+    <string name="sell_resource_improve_points">あなたのポイントは販売資源によって増加しました</string>
+    <string name="attendance_improve_points">あなたのポイントは毎日のチェックインで増加しました</string>
+    <string name="liked_the_article">文章をほめた</string>
+    <string name="replied_to_the_article">文章に返信した</string>
+    <string name="resource_update">リソースの更新</string>
+    <string name="points_change">せきぶんへんどう</string>
+    <string name="post_improve_points">投稿によりポイントが増加しました</string>
+    <string name="buy_resource_lower_points">あなたのポイントはネットディスクの購入によってリンクが減少しました</string>
+    <string name="selected_recommendations">推奨項目の選択</string>
+    <string name="new_post">最新リリース</string>
+    <string name="service_agreement_update">サービスプロトコルの更新</string>
+    <string name="network_request_failed">ネットワーク要求に失敗しました</string>
+    <string name="china_mainland_verify">中国大陸部のユーザーは、すべての機能を使用するために携帯電話番号をバインドする必要があります</string>
+    <string name="bind_phone_number">携帯電話番号のバインド</string>
+    <string name="phone_number">電話番号</string>
+    <string name="binding">バインド</string>
+    <string name="send">送信</string>
+    <string name="binding_phone_number_hint">電話番号を入力し、認証コードを送信してください。入力した電話番号に6桁のワンタイムコードを含むメッセージを送信します。ワンタイムコードを入力して携帯電話番号をバインドしてください。</string>
+    <string name="enter_valid_phone_number">有効な+86携帯番号を入力してください</string>
+    <string name="del_comment_lower_points">あなたのポイントはコメント削除によって減少しました</string>
+    <string name="register_improve_points">アカウント登録によりポイントが増加しました</string>
+    <string name="authentication">資格認定</string>
+    <string name="total_posts">投稿数</string>
+    <string name="number_of_resources">リソース数</string>
+    <string name="collect">コレクション</string>
+    <string name="applicable_equipment">適用機器</string>
+    <string name="download_channel">ダウンロードチャネル</string>
+    <string name="file_size">ファイルサイズ</string>
+    <string name="extracted_code">抽出コード</string>
+    <string name="author">作者</string>
+    <string name="view">表示</string>
+    <string name="download">ダウンロード</string>
+    <string name="first_release">最初のリリース</string>
+    <string name="last_update">最終更新</string>
+    <string name="daily_attendance">毎日チェックイン</string>
+    <string name="signed_in_today">本日到着いたしました</string>
+    <string name="sign_in_successful">署名に成功しました</string>
+    <string name="check_in_failed">署名に失敗しました</string>
+    <string name="you_have_checked_in_today">本日ご到着いただきました</string>
 </resources>
