--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -93,4 +93,46 @@
     <string name="core_team">核心团队 —— 我们的团队，来自中国各地。</string>
     <string name="special_thanks">特别鸣谢 —— 感谢幕后为我们提供技术支持的开发者们。</string>
     <string name="open_source_address">开源地址</string>
+    <string name="private_message">私信</string>
+    <string name="trends">动态</string>
+    <string name="categorize">分类</string>
+    <string name="sell_resource_improve_points">您的积分因出售资源增加了</string>
+    <string name="attendance_improve_points">您的积分因每日签到增加了</string>
+    <string name="liked_the_article">点赞了文章</string>
+    <string name="replied_to_the_article">回复了文章</string>
+    <string name="resource_update">资源更新</string>
+    <string name="points_change">积分变动</string>
+    <string name="post_improve_points">您的积分因发布帖子增加了</string>
+    <string name="buy_resource_lower_points">您的积分因购买网盘链接减少了</string>
+    <string name="selected_recommendations">精选推荐</string>
+    <string name="new_post">最新发布</string>
+    <string name="service_agreement_update">服务协议更新</string>
+    <string name="network_request_failed">网络请求失败</string>
+    <string name="china_mainland_verify">中国大陆用户需要绑定手机号才能使用全部功能</string>
+    <string name="bind_phone_number">绑定手机号</string>
+    <string name="phone_number">电话号码</string>
+    <string name="binding">绑定</string>
+    <string name="send">发送</string>
+    <string name="binding_phone_number_hint">请输入您的电话号码，并发送验证码。我们会向您输入的电话号码发送一封包含六位一次性代码的短信，请输入一次性代码绑定您的手机号。</string>
+    <string name="enter_valid_phone_number">请输入有效的 +86 手机号</string>
+    <string name="del_comment_lower_points">您的积分因删除评论减少了</string>
+    <string name="register_improve_points">您的积分因注册账户增加了</string>
+    <string name="authentication">认证</string>
+    <string name="total_posts">帖子数</string>
+    <string name="number_of_resources">资源数</string>
+    <string name="collect">收藏</string>
+    <string name="applicable_equipment">适用设备</string>
+    <string name="download_channel">下载渠道</string>
+    <string name="file_size">文件大小</string>
+    <string name="extracted_code">提取码</string>
+    <string name="author">作者</string>
+    <string name="view">查看</string>
+    <string name="download">下载</string>
+    <string name="first_release">首次发布</string>
+    <string name="last_update">最后更新</string>
+    <string name="daily_attendance">每日签到</string>
+    <string name="signed_in_today">今日已签到</string>
+    <string name="sign_in_successful">签到成功</string>
+    <string name="check_in_failed">签到失败</string>
+    <string name="you_have_checked_in_today">今日您已签到</string>
 </resources>
